sonar recomended updates